--- a/src/components/experience/ExperienceTimeline.astro
+++ b/src/components/experience/ExperienceTimeline.astro
@@ -2,7 +2,7 @@
 const { title, timelinegrid } = Astro.props;
 ---
 
-<div class="w-full px-4 py-8">
+<div class="w-full">
     <div class="max-w-7xl mx-auto">
       <h1 class="text-3xl font-bold mb-8">{title}</h1>
         <div class="px-4 sm:px-6">
