feat(landing): Landing page finished

--- a/src/components/hero/HeroSection.astro
+++ b/src/components/hero/HeroSection.astro
@@ -1,5 +1,6 @@
 ---
-import {GraduationCap, Github, Linkedin } from 'lucide-react'
+import {GraduationCap, Github, Linkedin, FileUser } from 'lucide-react'
+import { Separator } from '@/components/ui/separator'
 ---
 
 <section class="w-full py-6 md:py-8 lg:py-16 xl:py-16">
@@ -11,23 +12,37 @@ import {GraduationCap, Github, Linkedin } from 'lucide-react'
         <p class="mx-auto max-w-[700px] text-zinc-500 md:text-xl dark:text-zinc-400">
           Deep Learning Researcher, Mutlimedia Engineer
         </p>
-        <p class="mx-auto max-w-[700px] text-zinc-500 md:text-xl dark:text-zinc-50">
-          I'm a Ph.D in Computer Science working in the Pattern Recognition and Artificial Intelligence Group (PRAIG) from the University of Alicante, Spain. 
-          I mainly work on deep learning research, mainly Optical Music Recognition. I like to open-source my projects to share my research (and my failures) to the community.
-        </p>
       </div>
       <div class="flex justify-center space-x-4 mt-8">
-        <a href="https://github.com/antoniorv6" target="_blank" rel="noopener noreferrer" class="text-zinc-500 hover:text-primary transition-colors">
-          <Github size={24} />
+        <a href="/pdf/CV_ARIOS.pdf" target="_blank" rel="noopener noreferrer" class="text-zinc-500 hover:text-primary transition-colors">
+          <FileUser size={24} />
           <span class="sr-only">GitHub</span>
         </a>
         <a href="https://scholar.google.es/citations?user=XC0Tq-MAAAAJ&hl=es&oi=ao" target="_blank" rel="noopener noreferrer" class="text-zinc-500 hover:text-primary transition-colors">
           <GraduationCap size={24} />
           <span class="sr-only">Google Scholar</span>
         </a>
+        <a href="https://github.com/antoniorv6" target="_blank" rel="noopener noreferrer" class="text-zinc-500 hover:text-primary transition-colors">
+          <Github size={24} />
+          <span class="sr-only">GitHub</span>
+        </a>
         <a href="https://www.linkedin.com/in/antonio-r%C3%ADos-vila-3b189312b/" target="_blank" rel="noopener noreferrer" class="text-zinc-500 hover:text-primary transition-colors">
           <Linkedin size={24} />
           <span class="sr-only">LinkedIn</span>
+        </a>
+      </div>
+      <Separator className="m-auto max-w-[700px]" />
+      <div class="flex justify-center space-x-4 mt-8">
+        <a href="#projects" class="text-zinc-500 hover:text-primary transition-colors">
+          Projects
+        </a>
+        <p class="text-zinc-500">·</p>
+        <a href="#research" class="text-zinc-500 hover:text-primary transition-colors">
+          Research
+        </a>
+        <p class="text-zinc-500">·</p>
+        <a href="#experience" class="text-zinc-500 hover:text-primary transition-colors">
+          Experience
         </a>
       </div>
     </div>
