--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from '../layouts/Layout.astro';
 import ProjectsGrid from '@/components/projects/ProjectsGrid.astro';
 import ExperienceTimeline from '@/components/experience/ExperienceTimeline.astro';
 import HeroSection from '@/components/hero/HeroSection.astro';
+import PapersGrid from '@/components/papers/PapersGrid.astro';
 
 
 const education = [
@@ -58,7 +59,8 @@ const works = [
 	<main>
         <HeroSection />
 		<ProjectsGrid />
-        <div class="grid sm:grid-cols-1 md:grid-cols-2 gap-6 sm:mx-4 md:mx-20 px-4 py-8">
+        <PapersGrid />
+        <div class="grid sm:grid-cols-1 md:grid-cols-2 gap-6 sm:mx-4 md:mx-20 px-4 py-8" id="experience">
             <ExperienceTimeline title="Experience" timelinegrid={works} />
             <ExperienceTimeline title="Education" timelinegrid={education} />
         </div>
