feat(papers): Created papers page and fetched data from DBLP

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,57 +2,9 @@
 import '@/styles/global.css'
 import Layout from '../layouts/Layout.astro';
 import ProjectsGrid from '@/components/projects/ProjectsGrid.astro';
-import ExperienceTimeline from '@/components/experience/ExperienceTimeline.astro';
 import HeroSection from '@/components/hero/HeroSection.astro';
 import PapersGrid from '@/components/papers/PapersGrid.astro';
-
-
-const education = [
-    {
-        date: "July 2024",
-        title: "Ph.D in Computer Science - University of Alicante",
-        description: "Obtained the Ph.D title in Computer Science with the thesis: \" End-to-end full-page optical music recognition beyond staff-level transcription\".",
-    },
-    {
-        date: "June 2021",
-        title: "Data Science Master",
-        description: "Master in Data Science at the University of Alicante. Best class expedient award received.",
-    },
-    {
-        date: "June 2020",
-        title: "Multimedia Engineering Degree",
-        description: "Graduated in Multimedia Engineering at the University of Alicante.",
-    },
-]
-
-const works = [
-    {
-        date: "Oct 2021 - July 2024",
-        title: "Ph.D Candidate - Generalitat Valenciana",
-        description: "Ph.D Candidate with the grant ACIF 2021/036 from the Generalitat Valenciana. Working on my Ph.D thesis: \" End-to-end full-page optical music recognition beyond staff-level transcritption\".",
-    },
-    {
-        date: "Oct 2019 - March 2021",
-        title: "Full-Stack Developer - University of Alicante",
-        description: "Full Stack development of HISPAMUS MuRET API for music scores research and recognition. Design and programming of Deep Learning Systems for advanced API functionalities",
-    },
-    {
-        date: "January 2019 - June 2019",
-        title: "Full-Stack Developer - University of Alicante",
-        description: "API and database programming for Metapress research project at the University of Alicante",
-    },
-    {
-        date: "January 2019 - June 2019",
-        title: "Full-Stack Developer - University of Alicante",
-        description: "API and database programming for Metapress research project at the University of Alicante",
-    },
-    {
-        date: "March 2018 - January 2019",
-        title: "Full-Stack Developer - Complutense University of Madrid",
-        description: "Web application programming for the TEU research project developed with Laravel and Bootstrap. Database programming and design in PostgreSQL.",
-    },
-]
-
+import ExperienceContainer from '@/components/experience/ExperienceContainer.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -60,9 +12,6 @@ const works = [
         <HeroSection />
 		<ProjectsGrid />
         <PapersGrid />
-        <div class="grid sm:grid-cols-1 md:grid-cols-2 gap-6 sm:mx-4 md:mx-20 px-4 py-8" id="experience">
-            <ExperienceTimeline title="Experience" timelinegrid={works} />
-            <ExperienceTimeline title="Education" timelinegrid={education} />
-        </div>
+        <ExperienceContainer />
 	</main>
 </Layout>
