--- a/src/components/projects/ProjectsGrid.astro
+++ b/src/components/projects/ProjectsGrid.astro
@@ -15,10 +15,11 @@ const showcase_projects = projects.slice(0, 4)
             description={project.description}
             language={project.language}
             tags={project.tags},
-            icon={project.icon}
+            icon={project.icon},
+            link={project.link}
           />
         ))}
-        <a href="#" class="hover:underline">All projects</a>
+        <a href="/projects" class="hover:underline">All projects</a>
       </div>
     </div>
   </div>
