fix(routing): Fixed bugs with routing

--- a/src/components/projects/ProjectsGrid.astro
+++ b/src/components/projects/ProjectsGrid.astro
@@ -19,7 +19,7 @@ const showcase_projects = projects.slice(0, 4)
             link={project.link}
           />
         ))}
-        <a href="/projects" class="hover:underline">All projects</a>
+        <a href="/antoniorv6.github.io/projects" class="hover:underline">All projects</a>
       </div>
     </div>
   </div>
