fix(components): Deployment errors with icons solved

--- a/src/components/experience/ExperienceTimeline.astro
+++ b/src/components/experience/ExperienceTimeline.astro
@@ -7,7 +7,7 @@ const { title, timelinegrid } = Astro.props;
       <h1 class="text-3xl font-bold mb-8">{title}</h1>
         <div class="px-4 sm:px-6">
             <div class="after:absolute after:inset-y-0 after:w-px after:bg-muted-foreground/20 relative pl-6 after:left-0 grid gap-10">
-                {timelinegrid.map((work) => (
+                {timelinegrid.map((work:any) => (
                     <div class="grid gap-1 text-sm relative">
                         <div class="aspect-square w-3 bg-primary rounded-full absolute left-0 translate-x-[-29.5px] z-10 top-1" />
                         <div class="font-medium">{work.date}</div>
