build(deploy): Switching to Netlify

--- a/src/components/hero/HeroSection.astro
+++ b/src/components/hero/HeroSection.astro
@@ -14,7 +14,7 @@ import { Separator } from '@/components/ui/separator'
         </p>
       </div>
       <div class="flex justify-center space-x-4 mt-8">
-        <a href="/antoniorv6.github.io/pdf/CV_ARIOS.pdf" target="_blank" rel="noopener noreferrer" class="text-zinc-500 hover:text-primary transition-colors">
+        <a href="/pdf/CV_ARIOS.pdf" target="_blank" rel="noopener noreferrer" class="text-zinc-500 hover:text-primary transition-colors">
           <FileUser size={24} />
           <span class="sr-only">GitHub</span>
         </a>
