--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -29,6 +29,7 @@ import ProjectCard from '@/components/projects/ProjectCard.astro';
                                     description={project.description}
                                     language={project.language}
                                     tags={project.tags},
+                                    icon={project.icon},
                                     link={project.link}
                                 />
                         ))}
