--- a/src/components/projects/ProjectsGrid.astro
+++ b/src/components/projects/ProjectsGrid.astro
@@ -15,6 +15,7 @@ const showcase_projects = projects.slice(0, 4)
             description={project.description}
             language={project.language}
             tags={project.tags},
+            icon={project.icon},
             link={project.link}
           />
         ))}
