fix(Broken URLs for projects and papers fixed):

--- a/src/components/papers/PapersGrid.astro
+++ b/src/components/papers/PapersGrid.astro
@@ -15,7 +15,7 @@ const showcase_papers = papers.slice(0, 4);
             paper={paper}
           />
         ))}
-        <a href="/antoniorv6.github.io/papers" class="hover:underline">All research</a>
+        <a href="papers" class="hover:underline">All research</a>
       </div>
     </div>
   </div>
