--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import PapersGrid from '@/components/papers/PapersGrid.astro';
 import ExperienceContainer from '@/components/experience/ExperienceContainer.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Antonio Ríos Vila Portfolio">
 	<main>
         <HeroSection />
 		<ProjectsGrid />
