--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,6 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 import projects from '@/data/projects';
 import ProjectCard from '@/components/projects/ProjectCard.astro';
+import BackButton from '@/components/BackButton.astro'
 
 
 ---
@@ -19,6 +20,7 @@ import ProjectCard from '@/components/projects/ProjectCard.astro';
                     All my open-source projects so far
                   </p>
                 </div>
+                <BackButton/>
             </div>
         </section>
         <section class="max-w-7xl mx-auto px-4 py-8">
