Included some presentation at the hero section

--- a/src/components/hero/HeroSection.astro
+++ b/src/components/hero/HeroSection.astro
@@ -49,5 +49,7 @@ import { Separator } from '@/components/ui/separator'
           Get in touch!
         </a>
       </div>
+      <p>Hi! I am Antonio. I am a Dr in Computer Science from Alicante, Spain. I mainly research and develop deep learning projects for music reading systems. 
+        <br> I also work on web development and, in my spare time, I enjoy doing some 3D printing! </p>
     </div>
 </section>
